server_k8s/manifests/base/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - name: grafana
      port: 5000
      targetPort: 5000
