server_k8s/manifests/base/grafana/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
spec:
  parentRefs:
    - name: cloudshield-gateway
      sectionName: https-grafana
  rules:
    - backendRefs:
        - name: grafana-service
          kind: Service
          port: 5000
      matches:
        - path:
            type: PathPrefix
            value: /
